--- a/templates/home_page.hbs
+++ b/templates/home_page.hbs
@@ -1,78 +1,80 @@
-<main class="main-sidebar" role="main">
-<div id="sidebar" class="sidebar-panel">
-  <ul class="sidebar">
-    <li class="sidebar-item sidebar-home open">
-      <a href="{{page_path 'help_center'}}" class="sidebar-item-title">
-        Home
-      </a>
-    </li>
-    <li class="sidebar-section" v-for='category in categories' :data-id='category.id'>
-      <h4 class="sidebar-category-title" v-cloak>{[{category.name}]}</h4>
-      <ul>
-        <li :class="['sidebar-item', isOpen(section.id)]" v-for='section in category.sections' :data-id='section.id'>
-          <span class="sidebar-item-title" @click='setActiveSection(section.id)'>
-            {[{section.name}]}
-          </span>
-          <ul v-if='section.id === activeSection'>
-            <li :class="['sidebar-item', isCurrent(article.id)]" v-for='article in section.articles'>
-              <a :href='article.html_url' class="sidebar-item-link">
-                {[{article.title}]}
-              </a>
-            </li>
-          </ul>
-        </li>
-      </ul>
-    </li>
-  </ul>
-</div>
-
-
-<div class="container content">
-
-  <div class="community-image"></div>
-
-  <h1 class="home-title">{{settings.homepage_title}}</h1>
-  <p class="home-desc">{{settings.homepage_description}}</p>
-
+<section class="section hero">
+  <div class="hero-inner">
+    <h1 class="hero-title">Zen Help Center</h1>
+    {{search submit=false instant=true class='search search-full'}}
+    <div class="quick-search">
+      <span>Popular Search Topics:</span>
+      <a @click="onQuickSearchClick" href="#">Purchase</a>,
+      <a @click="onQuickSearchClick" href="#">Installation</a>,
+      <a @click="onQuickSearchClick" href="#">Customization</a>
+    </div>
+  </div>
+</section>
+<div class="container">
   <section class="section knowledge-base">
     <section class="categories blocks">
       <ul class="blocks-list">
         {{#each categories}}
           {{#if ../has_multiple_categories}}
-            <li class="blocks-item">
+            <li class="blocks-item" data-category="{{id}}">
               <a href='{{url}}' class="blocks-item-link">
-                <h3 class="blocks-item-title">{{name}}</h3>
+                <icon :id="{{id}}"></icon>
+                <h1 class="blocks-item-title">{{name}}</h1>
                 <p class="blocks-item-description">{{excerpt description}}</p>
               </a>
+              {{#each sections}}
+                {{#each articles}}
+                  <a href='{{url}}' class="article-link"></a>
+                {{/each}}
+              {{/each}}
             </li>
           {{else}}
             {{#each sections}}
-              <li class="blocks-item {{#if internal}}blocks-item-internal{{/if}}">
+              <li class="blocks-item">
                 <a href='{{url}}' class="blocks-item-link">
-                  <h3 class="blocks-item-title">
-                    {{name}}
-                    {{#if internal}}
-                      <span class="icon-lock" title="{{t 'internal'}}"></span>
-                    {{/if}}
-                  </h3>
+                  <icon :id="{{id}}"></icon>
+                  <h1 class="blocks-item-title">{{name}}</h1>
                   <p class="blocks-item-description">{{excerpt description}}</p>
                 </a>
               </li>
             {{/each}}
           {{/if}}
         {{/each}}
+        <li class="blocks-item">
+          <a href='{{page_path "community"}}' class="blocks-item-link">
+            <icon :id="'community'"></icon>
+            <h1 class="blocks-item-title">Community</h1>
+            <p class="blocks-item-description"></p>
+          </a>
+        </li>
       </ul>
       {{pagination}}
     </section>
+    {{#if promoted_articles}}
+      <section class="popular">
+        <h1>Popular Articles</h1>
+        <ul class="popular-articles">
+          {{#each promoted_articles}}
+            <li class="popular-articles-item">
+              <a href="{{url}}">
+                {{title}}
+              </a>
+            </li>
+          {{/each}}
+        </ul>
+      </section>
+    {{/if}}
   </section>
-
-  <section class="section support">
-    <h3>Still have questions?</h3>
-    <p>We're happy to help with whatever questions you have! You can reach out to us by chat or <a href="{{page_path 'new_request'}}">send us an email</a>!</p>
-  </section>
-
 </div>
+<script>
+new Vue({
+  el: 'main',
+  methods: {
+  	onQuickSearchClick: function (event){
+  		document.location = document.location.origin +'/hc/search?utf8=✓&query='+event.target.innerText
+    }
+  }
+})
 
-
-<script>sidebar.$mount("#sidebar");</script>
-</main>
+$("body").addClass("no-subfooter");
+</script>
