--- a/templates/new_request_page.hbs
+++ b/templates/new_request_page.hbs
@@ -1,7 +1,9 @@
+<nav class="sub-nav">
+  <div class="container">
+    {{breadcrumbs}} {{search submit=false}}
+  </div>
+</nav>
 <div class="container">
-  <nav class="sub-nav">
-  </nav>
-
   <h1>
     {{t 'submit_a_request'}}
     {{#if follow_up}}
@@ -10,10 +12,12 @@
       </span>
     {{/if}}
   </h1>
-
   <div class="form">
     {{request_form}}
   </div>
-
   {{chat}}
 </div>
+
+<script>
+$("body").addClass("no-subfooter");
+</script>
