--- a/templates/search_results.hbs
+++ b/templates/search_results.hbs
@@ -1,40 +1,18 @@
-<main class="main-sidebar" role="main">
-<div id="sidebar" class="sidebar-panel">
-  <ul class="sidebar">
-    <li class="sidebar-item sidebar-home">
-      <a href="{{page_path 'help_center'}}" class="sidebar-item-title">
-        Home
-      </a>
-    </li>
-    <li class="sidebar-section" v-for='category in categories' :data-id='category.id'>
-      <h4 class="sidebar-category-title" v-cloak>{[{category.name}]}</h4>
-      <ul>
-        <li :class="['sidebar-item', isOpen(section.id)]" v-for='section in category.sections' :data-id='section.id'>
-          <span class="sidebar-item-title" @click='setActiveSection(section.id)'>
-            {[{section.name}]}
-          </span>
-          <ul v-if='section.id === activeSection'>
-            <li :class="['sidebar-item', isCurrent(article.id)]" v-for='article in section.articles'>
-              <a :href='article.html_url' class="sidebar-item-link">
-                {[{article.title}]}
-              </a>
-            </li>
-          </ul>
-        </li>
-      </ul>
-    </li>
-  </ul>
-</div>
-
-
-<div class="container content">
+<nav class="sub-nav">
+  <div class="container">
+    {{breadcrumbs}} {{search submit=false}}
+  </div>
+</nav>
+<div class="container">
   <header class="page-header">
     <h1>{{t 'search_results'}}</h1>
     <p class="page-header-description">{{t 'results' query=query count=results_count}}</p>
   </header>
-
   <div class="search-results">
     <section class="search-results-column">
+      <h3 class="search-results-subheading">
+        {{t 'knowledge_base'}}
+      </h3>
       {{#if article_results}}
         <ul class="search-results-list">
           {{#each article_results}}
@@ -47,13 +25,14 @@
                 <li>
                   <ol class="breadcrumbs search-result-breadcrumbs">
                     {{#each path_steps}}
-                      <li title="{{name}}"><a href="{{url}}">{{name}}</a></li>
+                      <li title="{{name}}">
+                        <a href="{{url}}">{{name}}</a>
+                      </li>
                     {{/each}}
                   </ol>
                 </li>
                 <li class="meta-data">
-                  {{#link 'user_profile' id=author.id}}
-                    {{author.name}}
+                  {{#link 'user_profile' id=author.id}} {{author.name}}
                   {{/link}}
                 </li>
                 <li class="meta-data">{{date created_at timeago=true}}</li>
@@ -65,17 +44,55 @@
       {{else}}
         <p>
           {{t 'no_results' query=query}}
-          {{#link 'help_center'}}
-            {{t 'browse_knowledge_base'}}
+          {{#link 'help_center'}} {{t 'browse_knowledge_base'}}
           {{/link}}
         </p>
       {{/if}}
     </section>
+    {{#if help_center.community_enabled}}
+      <section class="search-results-column">
+        <h3 class="search-results-subheading">
+          {{t 'community'}}
+        </h3>
+        {{#if post_results}}
+          <ul class="search-results-list">
+            {{#each post_results}}
+              <li class="search-result">
+                <a href="{{url}}" class="search-result-link">{{title}}</a>
+                <span class="search-result-meta-count">
+                  {{comment_count}}
+                </span>
+                <ul class="meta-group">
+                  <li>
+                    <ol class="breadcrumbs search-result-breadcrumbs">
+                      {{#each path_steps}}
+                        <li title="{{name}}">
+                          <a href="{{url}}">{{name}}</a>
+                        </li>
+                      {{/each}}
+                    </ol>
+                  </li>
+                  <li class="meta-data">
+                    {{#link 'user_profile' id=author.id}} {{author.name}}
+                    {{/link}}
+                  </li>
+                  <li class="meta-data">{{date created_at timeago=true}}</li>
+                </ul>
+                <div class="search-result-description">
+                  {{text}}
+                </div>
+              </li>
+            {{/each}}
+          </ul>
+        {{else}}
+          <p>
+            {{t 'no_results' query=query}}
+            {{#link 'topics'}} {{t 'browse_community'}}
+            {{/link}}
+          </p>
+        {{/if}}
+      </section>
+    {{/if}}
   </div>
-
   {{pagination}}
 </div>
-
-
-<script>sidebar.$mount("#sidebar");</script>
-</main>
